css/styles.css
/* ... */
#main {
  margin-top: 68px;
}

#main section {
  border-bottom: 1px solid #f2f1ee;
  padding: 1em;
}

#main section > * + * {
  margin-top: 1em;
}

#main section h1,
#main section h2 {
  font-size: 1.333em;
  line-height: 1.1em;
  text-align: center;
}

#main section h1:after,
#main section h2:after {
  background: #c0b8a9;
  content: "";
  display: block;
  height: 1px;
  margin: 0.5em auto;
  overflow: hidden;
  width: 3em;
}

#main section h3 {
  color: #595959;
  font-size: 1.167em;
  font-weight: 400;
  line-height: 1.1em;
}

#main section ul {
  list-style: disc;
  margin-left: 1em;
}

#newsletter {
  background-color: #C0B8A9;
  padding: 1em;
  text-align: center;
}

#newsletter h2 {
  font-size: 1.333em;
  line-height: 1.1em;
  text-align: center;
}

#newsletter h2:after {
  background: #231f20;
  content: "";
  display: block;
  height: 1px;
  margin: 0.5em auto;
  overflow: hidden;
  width: 3em;
}

#newsletter p,
#newsletter label,
#newsletter button {
  font-size: 80%;
  line-height: 1.5em;
}

#newsletter .container > * + * {
  margin-top: 1em;
}

#newsletter form {
  text-align: left;
}

#newsletter form .btn {
  background-color: transparent;
  border: 1px solid #231f20;
  color: #231f20 !important;
  padding: 0.5em 1em;
}

#newsletter form .btn:hover,
#newsletter form .btn:focus {
  background-color: #ffffff;
}

#cookies {
  align-items: center;
  background-color: #075D92;
  color: #ffffff;
  display: none;
  justify-content: space-between;
  left: 0;
  padding: 1em;
  position: fixed;
  top: 68px;
  width: 100%;
  z-index: 3;
}

#cookies h2 {
  font-size: 1em;
  line-height: 1.1em;
  margin-bottom: 0.5em;
}

#cookies p {
  font-size: 0.75em;
  line-height: 1.3em;
  padding-right: 1em;
}

#cookies a {
  color: #ffffff;
  text-decoration: underline;
}

#cookies a:hover,
#cookies a:focus{
  color: orange;
  text-decoration: none;
}

#cookies .btn {
  background-color: #ffffff;
  color: #231f20 !important;
  padding: 0.5em 1em !important;
  white-space: nowrap;
}

#cookies .btn:hover,
#cookies .btn:focus {
  background-color: #231f20;
  color: #ffffff !important;
}

#footer {
  background: #231f20;
  color: #ffffff;
  line-height: 1.5em;
  padding: 1em 1em 4em;
}

#footer .container > div + div {
  margin-top: 1em;
}

#footer .copyright {
  color: #abaaaa;
  font-size: 60%;
  line-height: 1.5em;
  text-align: center;
}

#footer .footer-links h2 {
  font-size: 0.875em;
}

#footer .footer-links > div + div {
  margin-top: 1em;
}

#footer .footer-links ul > li {
  font-size: 80%;
  line-height: 2em;
}

#footer .footer-links ul > li > a {
  color: #abaaaa;
  text-decoration: none;
}

#footer .footer-links ul > li > a:hover,
#footer .footer-links ul > li > a:focus {
  color: #ffffff;
}

#footer .social-links > ul {
  display: flex;
  justify-content: center;
}

#footer .social-links > ul > li {
  line-height: 1;
}

#footer .social-links > ul > li + li {
  margin-left: 0.25em;
}

#footer .social-links > ul > li > a {
  border: 1px solid #ffffff;
  border-radius: 50%;
  display: inline-block;
  opacity: 0.62;
  padding: 0.5em;
}

#footer .social-links > ul > li > a:hover,
#footer .social-links > ul > li > a:focus {
  opacity: 1;
}

#footer .social-links > ul > li > a[target]:after {
  content: none !important;
}

#footer > .container,
#main > section,
#newsletter > .container,
.aside > .container {
  margin: 0 auto;
  max-width: 60em;
}

.aside {
  background: #f2f1ee; 
  border-top: 1px solid #C0B8A9;
  padding: 1em;
  text-align: center;
}

.aside .container > * + * {
  margin-top: 1em;
}

.aside h2 {
  font-size: 1.333em;
  line-height: 1.1em;
  text-align: center;
}

.aside h2:after {
  background: #c0b8a9;
  content: "";
  display: block;
  height: 1px;
  margin: 0.5em auto;
  overflow: hidden;
  width: 3em;
}

.aside h3 {
  font-size: 1em;
}

.aside p {
  font-size: 80%;
  line-height: 1.5em;
}

.aside ul > li + li {
  margin-top: 1em;
}

.aside ul > li {
  background-repeat: no-repeat;
  background-position: top center;
  background-size: 60px;
  padding-top: 72px;
}

.aside ul > li.safety {
  background-image: url(/images/assets/safety.svg);
}

.aside ul > li.affordable {
  background-image: url(/images/assets/affordable.svg);
}

.aside ul > li.accessible {
  background-image: url(/images/assets/accessible.svg);
}

.aside ul > li.staff {
  background-image: url(/images/assets/staff.svg);
}

.badges  {
  text-align: center;
}

.badges a {
  display: inline-block;
}

.badges a[target]:after {
  content: none;
}

.btn {
  background-color: #075D92;
  border: none;
  border-radius: 0.4167em;
  color: #ffffff !important;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em;
  text-align: center;
  text-decoration: none;
}

.btn:hover,
.btn:focus {
  background-color: #2087C8;
}

.btn.fixed {
  border-radius: 0;
  bottom: 0;
  left: 0;
  position: fixed;
  width: 100% !important;
  z-index: 5;
}

.collapsible > li > button {
  background: transparent;
  border: none;
  color: #075D92;
  cursor: pointer;
  display: block;
  margin: 0;
  padding: 0;
  text-align: left;
  width: 100%;
}

.collapsible > li > button:hover,
.collapsible > li > button:focus {
  color: #2087C8;
}

.collapsible > li > div {
  padding: 1em 0;
}

.collapsible > li > div > * + * {
  margin-top: 1em;
}

.form-group:not(:last-child),
.form-inputs {
  margin-bottom: 1em;
}

.form-group input[type="email"],
.form-group input[type="text"] {
  border: 1px solid #231f20;
  font-size: 1em;
  line-height: 1em;
  padding: 0.25em 0.5em;
  width: 100%;
}

.form-group label {
  display: block;
}

.hero {
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  height: 80vh;
  justify-content: flex-end;
  padding: 0 1em 1em;
}

.hero h1 {
  color: #ffffff;
  font-size: 1.667em;
  font-weight: 600;
  line-height: 1;
  text-align: center;
  text-shadow: 0px 0px 4px #231f20;
}

.hero .btn {
  margin-top: 1em;
  width: 100%;
}
/* ... */

